Added deep cloning, plus moved position information into metadata